--- a/Kira.bib
+++ b/Kira.bib
@@ -285,6 +285,13 @@
 	Volume = {11},
 	Year = {2014}}
 
+@techreport{massie13,
+  title={{ADAM}: Genomics Formats and Processing Patterns for Cloud Scale Computing},
+  author={Massie, Matt and Nothaft, Frank and Hartl, Christopher and Kozanitis, Christos and Schumacher, Andr{\'e} and Joseph, Anthony D and Patterson, David A},
+  year={2013},
+  institution={UCB/EECS-2013-207, EECS Department, University of California, Berkeley}
+}
+
 @inproceedings{nothaft15,
 	Author = {Frank	Austin Nothaft and Matt Massie and Timothy Danford and Zhao Zhang and Uri Laserson and Carl Yeksigian and Jey Kottalam and Arun Ahuja and Jeff Hammerbacher and Michael	Linderman and Michael Franklin and Anthony Joseph and David Patterson},
 	Booktitle = {Proceedings of the ACM SIGMOD International Conference on Management of Data (SIGMOD '15)},
