--- a/Kira.tex
+++ b/Kira.tex
@@ -1022,8 +1022,8 @@ file I/O is similar to GlusterFS, file system metadata is consolidated onto a sm
 \section{Performance}
 \label{sec:Performance}
 
-We evaluate Kira SE's performance with both Spark's Scala and Python API against the HPC solution with the 
-C code in the SEP library (referred to as the C version in the following text). 
+We compare Kira SE's performance when running on Spark and PySpark against the HPC solution that runs
+the C code in the SEP library (referred to as the C version in the following text). 
 Because all implementations use the same SEP library, Kira SE (both Scala and Python implementation) 
 perform an identical amount of computation and I/O as the C version.
 
@@ -1048,8 +1048,8 @@ Error bars in the figures are standard deviation of the measurements.
 
 The purpose of the scale-up experiments is to understand Spark's overhead by running
 Kira SE on a single node. 
-With Spark's Scala API, the performance lowdown is caused mainly by Java Virtual Machine (JVM) and JNI overhead.
-With pySpark, the slowdown is contributed by the interaction between the runtime of Scala, Python and C. 
+With Spark's Scala API, the performance slowdown is caused mainly by Java Virtual Machine (JVM) and JNI overhead.
+With PySpark, the slowdown is caused by the interaction between the runtime of Scala, Python and C. 
 We also wanted to identify the factors that bound Kira SE's performance. 
 For both Kira SE and the C implementation, we store data locally in an ext4 file system.
 
@@ -1069,12 +1069,12 @@ to the two implementations as scalaKira SE and pyKira SE, respectively.
 \end{figure}
 
 \zhaonote{revised with pyKira SE performance}
-The C version is bound by local disk performance and shows a 65\% improvement with
-eight cores compared to that of a single core. 
-Though scalaKira SE is $7.4\times$ slower than the C implementation
+The C version is bound by local disk performance and runtime improves by 65\% when scaling from a single core
+to eight cores.
+Although scalaKira SE is $7.4\times$ slower than the C implementation
 on a single core, Kira SE is within $2.2\times$ the performance of the C version when using all eight cores on the node.
 The pyKira SE is 39.7\% slower than the C implementation with a single core, while this performance gap
-shrinks as the core count increases. And the performance of pyKira SE converges to the C performance from four cores.
+shrinks as the core count increases. And the performance of pyKira SE converges to the C performance beyond four cores.
 The scaling curves indicate that the performance of the approaches begins to converge
 as core count increases. At convergence, both of the approaches will be saturating the local
 disk bandwidth.
@@ -1194,10 +1194,10 @@ Since the input files are $\sim$6MB each, and are always processed by a single t
 \emph{replicated} mode should be preferred to the \emph{striped replicated} mode.
 
 \zhaonote{revised with pyKira SE performance}
-On 256 cores, scalaKira SE outperforms all GlusterFS configurations except for the (impractical) \emph{distributed}
-mode. scalaKira SE delivers comparable performance to this mode (18\% slower). 
+When running on 256 cores, scalaKira SE outperforms all GlusterFS configurations except for the (impractical) \emph{distributed}
+mode. When comparing to the \emph{distributed} mode, scalaKira SE delivers comparable performance, as it is 18\% slower. 
 In our experiments with the 1TB dataset in Section~\ref{sec:1TB-EC2}, 
-scalaKira SE runs faster than the \emph{distributed} mode.
+scalaKira SE outperforms the \emph{distributed} mode.
 
 \zhaonote{revised with pyKira SE performance}
 As expected, pyKira SE improves the performance significantly with speedups of 2.1$\times$ and 1.8 $\times$
@@ -1211,8 +1211,8 @@ With this experiment, we seek to answer the following questions:
 
 \begin{itemize}
 \item Can Kira scale to process a 1TB dataset?
-\item What is the relative performance of Kira compared to the C version on EC2 resources?
-\item How do scalaKira SE and pyKira SE performance compare to that on a supercomputer?
+\item What is the relative performance of Kira compared to the HPC version on the Amazon EC2 cloud?
+\item How do scalaKira SE and pyKira SE performance compare to the HPC version on a supercomputer?
 \end{itemize}
 
 \subsubsection{Cloud}
@@ -1223,14 +1223,13 @@ SE's and pyKira SE's performance against the C implementation.
 ScalaKira SE runs $1.1\times$ and $1.3\times$ faster than the C version running on top of
 GlusterFS configured in \emph{distributed} mode on 256 cores and 512 cores respectively. 
 Using the more practical \emph{replicated} configuration of GlusterFS,scalaKira SE is $2.3\times$ and $2.5\times$ faster. 
-PyKira SE runs $2.5\times$ and $2.0\times$ faster than the impractical \emph{distirbuted} mode on 256 cores and 512 cores, respectively.
+PyKira SE runs $2.5\times$ and $2.0\times$ faster than the impractical \emph{distributed} mode on 256 cores and 512 cores, respectively.
 PyKira SE is also $4.1\times\sim5.2\times$ faster than the \emph{replicated} mode.
 A detailed breakdown of the performance is shown in Figure~\ref{fig:1tb-ec2}.
 The C version in \emph{distributed} mode is slower due to the node starvation that is introduced by our HPC solution.
 The C version in \emph{replicated} mode slows down $2.2\times$ than that in \emph{distributed} mode because the directory metadata query
 is dramatically slower ($13.4\times$), and the additional replica for each output file and associated metadata update introduces a slowdown
 of $1.4\times$.
-
 
 \begin{figure}[t]
 	\begin{center}
@@ -1242,14 +1241,13 @@ of $1.4\times$.
 
 \zhaonote{revised with pyKira SE performance}
 Compared to the experiment with the 65GB dataset in Section~\ref{sec:Performance-scaleout},
-pyKira SE processes $15.9\times$ more data in $16.3\times$ more time. Removing the Spark
+pyKira SE processes $15.9\times$ more data in $16.3\times$ more time. If we discount the Spark
 startup time, we can see that pyKira SE scales linearly in relation to the data size.
 
 \zhaonote{revised with pyKira SE performance}
 The overall throughput of pyKira SE is 1,335~MB/second, which is $4.0\times$ greater than necessary
 to support the upcoming Large Synoptic Survey Telescope (LSST), as discussed in
 Section~\ref{sec:Background-EngReq}. This high throughput enables real-time image processing.
-
 
 \subsubsection{Supercomputer}
 
@@ -1290,15 +1288,16 @@ are completely isolated. Thus, we can reason that, it is the I/O network resourc
 that causes the performance variance. 
 
 \zhaonote{revised with pyKira SE performance}
-On the other hand, pyKira is able to speedup the performance by 1.8x with an average time-to-solution of
-767.4~seconds and a standard deviation of 10.9~seconds. The reason of the stable performance of pyKira SE
-and scalaKira SE is that by exploiting data locality, both the Kira implementations move the I/O from network
-to local disk access, which gives a higher I/O bandwidth as well as better isolation.
+On the other hand, pyKira is able to accelerate the performance by 1.8x with an average time-to-solution of
+767.4~seconds and a standard deviation of 10.9~seconds. The stable performance of pyKira SE
+and scalaKira SE can be attributed to exploiting data locality: both the Kira implementations move the I/O from network
+to local disk access, which gives a higher I/O bandwidth as well as better task-to-task isolation.
 
 \subsection{Solid State Disk}
 \zhaonote{This section is new}
-We stated that the pyKira SE performance is bound by local disk bandwidth previously in \S\ref{sec:Performance-scaleup}.
-This experiment is to quantitatively evaluate the potential performance improvement by exploiting the solid state disks.
+In~\S\ref{sec:Performance-scaleup}, we stated that the pyKira SE performance is bound by local disk bandwidth.
+By running with high bandwidth SSDs, we can quantitatively evaluate the potential performance improvement that
+increased I/O bandwidth can provide.
 
 \begin{figure}[h]
 	\begin{center}
@@ -1308,35 +1307,34 @@ This experiment is to quantitatively evaluate the potential performance improvem
   	\end{center}
 \end{figure}
 
-Figure~\ref{fig:ssd-65GB} shows that using SSDs, pyKira SE can run as $1.6\times\sim2.0\times$ fast as that with spinning disks across scales.
+Figure~\ref{fig:ssd-65GB} shows that using SSDs allows pyKira SE to run $1.6\times\sim2.0\times$ faster than spinning disks across various cluster scales.
 The measurement with the 1TB dataset  shows a 1.9$\times$ and 2.0$\times$ speedup on 256 cores and 512 cores, respectively.
-Using SSD boost the sustained processing rate on 512 cores from 1,335~MB/second to 2,723~MB/second, which is about 8.3$\times$ higher
+Using SSDs boosts the sustained processing rate on 512 cores from 1,335~MB/second to 2,723~MB/second, which is about 8.3$\times$ higher
 than the LSST real time processing requirement.
 
 \subsection{Spark Streaming}
 \zhaonote{This section is new}
-In this section, we evaluate the performance of pyKira SE when deployed with Spark Streaming using the metric of average total delay 
+In this section, we evaluate the performance of pyKira SE when deployed with Spark Streaming. We evaluate on the metric of average total delay,
 which is composed of schedule delay and execution delay.
 The schedule delay is contributed by the system when it can not start processing the ready batch immediately as the previous batch is not finished.
 The execution delay is the time-to-solution for the data in the current batch.
-The overall delay (the sum of schedule and execution delay) is a metric of how quickly the results can include the latest data, 
-thus it also indicatess the freshness of the results.
+By summing these two numbers into an average total delay, we show the average time necessary to analyze a new batch of data.
 
 With Spark Streaming, users interact with the application deployment by setting the streaming interval between two batches of processing.
 This streaming interval setting will in turn affect the total delay for each data item and the throughput of the overall deployment.
 We investigate the configuration space of pyKira SE with a fixed cluster of 16 m2.4xlarge instances (128 cores in total) and 
 the 65~GB dataset. 
-Our goal is to find the streaming interval boundary within which the pyKira SE deployment can achieve a low total delay and a
-high sustained throughput.
+Our goal is to find the tradeoff between total delay and sustained throughput when changing the streaming interval used by pyKira SE. Our goal is to
+maximize throughput while minimizing delay.
 
-To ease the analysis, we first minimize the schedule delay by setting the streaming interval long enough so that the processing of two batches
+To simplify the analysis, we first minimize the scheduling delay by setting the streaming interval so that the processing of two batches
 do not overlap.
-For this purpose, we divide the 65GB dataset is divided into 88 subsets as the data stream comes in 88 arrivals, 
+For this purpose, we divide the 65GB dataset into 88 subsets. We chose this because the dataset contains 88 arrivals, 
 with each arrival having $\sim128$ files (780~MB).
 Then we profile the execution delay when pyKira SE processes with a batch size of 8 arrivals, 4 arrivals, 2 arrivals, and 1 arrival.
-Figure~\ref{fig:stream} shows the measurements.
-We see that the execution delay of the very beginning batch is higher than other batches due to the startup cost, e.g., load libraries into memory.
-Decreasing the arrival count for each batch halves the execution delay roughly except from 2 arrivals per batch to 1 arrival per batch.
+Figure~\ref{fig:stream} depicts the measurements.
+We see that the execution delay of the first batch is higher than other batches due to startup cost from loading libraries into memory.
+Decreasing the per-batch arrival count approximately halves the execution delay, until the step from 2 arrivals per batch to 1 arrival per batch.
 
 \begin{figure}[h]
 	\begin{center}
@@ -1394,7 +1392,6 @@ Thus a reasonable configuration space of streaming interval on this 128 core clu
 space between a sustained throughput range of $\{694-515.3\}$~MB/s and 
 an average total delay range of $\{4-11.9\}$~s.
 
-
 \section{Related Work}
 \label{sec:Related}
 
@@ -1440,18 +1437,16 @@ the disks on the compute nodes which enables data locality on filesystem access.
 \section{Future Work}
 \label{sec:Future}
 Kira is currently available as an alpha release (\url{https://github.com/BIDS/Kira}), 
-and we are planning migrate Kira SE into a larger project for supernovae detection.
+and we are planning to migrate Kira SE into a larger project for supernovae detection.
 
-With more processing capacity such as image reprojection and image co-addition, it will allow Kira to be
-used as an end-to-end astronomy image analysis pipeline. We will use this end-to-end pipeline
+By adding processing kernels including image reprojection and image co-addition, Kira will be
+useful as an end-to-end astronomy image analysis pipeline. We will use this end-to-end pipeline
 to continue evaluating the use of Spark as a conduit for many-task dataflow pipelines by
 comparing against the equivalent C implementation. With this system, we will try to determine
 which data intensive scientific applications execute most efficiently using ``big data''
-software architectures on commodity clusters rather than using HPC software methods on supercomputers.
+software architectures on commodity clusters, rather than using HPC software methods on supercomputers.
 From this, we hope to obtain insights that can drive the development of novel computing
 infrastructure for many-task scientific applications.
-
-
 
 \section{Conclusion}
 \label{sec:Conclusion}
