Adding bios for Frank and Dave.

--- a/Kira.tex
+++ b/Kira.tex
@@ -1571,22 +1571,43 @@ This research used resources of the National Energy Research Scientific Computin
 %\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{mshell}}]{Michael Shell}
 % or if you just want to reserve a space for a photo:
 
-\begin{IEEEbiography}{Michael Shell}
+\begin{IEEEbiography}{Zhao Zhang}
 Biography text here.
 \end{IEEEbiography}
 
-% if you will not have a photo at all:
-\begin{IEEEbiographynophoto}{John Doe}
+\begin{IEEEbiography}{Kyle Barbary}
 Biography text here.
-\end{IEEEbiographynophoto}
+\end{IEEEbiography}
+
+\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{pictures/frankaustinnothaft.jpg}}]{Frank Austin Nothaft}
+Frank Austin Nothaft is a PhD student in Computer Science at UC Berkeley. Frank holds a Masters of Science in Computer Science from UC Berkeley, and a Bachelors of Science with Honors in Electrical Engineering from Stanford University. Prior to joining UC Berkeley, Frank worked at Broadcom Corporation on design automation techniques for industrial scale wireless communication chips.
+\end{IEEEbiography}
+
+\begin{IEEEbiography}{Evan Sparks}
+Biography text here.
+\end{IEEEbiography}
+
+\begin{IEEEbiography}{Oliver Zahn}
+Biography text here.
+\end{IEEEbiography}
+
+\newpage
+
+\begin{IEEEbiography}{Michael J. Franklin}
+Biography text here.
+\end{IEEEbiography}
+
+\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{pictures/patterson.jpg}}]{David A. Patterson}
+David Patterson is the is the E.H. and M.E. Pardee Professor of Computer Science at UC Berkeley and is a past president of ACM, and past chair of the UC Berkeley Computer Science Department. David has been awarded the IEEE von Neumann Medal, the IEEE Johnson Storage Award, the SIGMOD Test of Time award, the ACM-IEEE Eckert-Mauchly Award, and the Katayanagi Prize. He was also elected to both AAAS societies, the National Academy of Engineering, the National Academy of Sciences, the Silicon Valley Engineering Hall of Fame, and to be a Fellow of the Computer History Museum, the IEEE, and the ACM.
+\end{IEEEbiography}
+
+\begin{IEEEbiography}{Saul Perlmutter}
+Biography text here.
+\end{IEEEbiography}
 
 % insert where needed to balance the two columns on the last page with
 % biographies
 %\newpage
-
-\begin{IEEEbiographynophoto}{Jane Doe}
-Biography text here.
-\end{IEEEbiographynophoto}
 
 % You can push biographies down or up by placing
 % a \vfill before or after them. The appropriate
