Adding Evan's bio.

--- a/Kira.tex
+++ b/Kira.tex
@@ -420,7 +420,7 @@
 % received ..."  text while in non-compsoc journals this is reversed. Sigh.
 
 \author{\begin{tabular}{cccc}
-{Zhao~Zhang} & {Kyle~Barbary} & {Frank~Austin~Nothaft} & {Evan~Sparks} \\
+{Zhao~Zhang} & {Kyle~Barbary} & {Frank~Austin~Nothaft} & {Evan~R.~Sparks} \\
 {Oliver~Zahn} & {Michael~J.~ Franklin} & {David~A.~Patterson} & {Saul~Perlmutter}
 \end{tabular}% <-this % stops a space
 %\\%\and % use '\and' if you need 'another row' of author names
@@ -436,7 +436,7 @@ the AMPLab and Berkeley Institute for Data Science, UC Berkeley.\protect
 % note need leading \protect in front of \\ to get a newline within \thanks as
 % \\ is fragile and will error, could use \hfil\break instead.
 \IEEEcompsocthanksitem Frank~Austin~Nothaft and David~A.~Patterson are with the AMP and ASPIRE Labs, UC Berkeley
-\IEEEcompsocthanksitem Evan~Sparks is with the AMPLab, UC Berkeley
+\IEEEcompsocthanksitem Evan~R.~Sparks is with the AMPLab, UC Berkeley
 \IEEEcompsocthanksitem Kyle~Barbary, Oliver~Zahn, and Saul~Perlmutter are with
 Berkeley Institute for Data Science and Berkeley Center for Cosmological Physics, UC Berkeley.
 }% <-this % stops an unwanted space
@@ -1583,8 +1583,8 @@ Biography text here.
 Frank Austin Nothaft is a PhD student in Computer Science at UC Berkeley. Frank holds a Masters of Science in Computer Science from UC Berkeley, and a Bachelors of Science with Honors in Electrical Engineering from Stanford University. Prior to joining UC Berkeley, Frank worked at Broadcom Corporation on design automation techniques for industrial scale wireless communication chips.
 \end{IEEEbiography}
 
-\begin{IEEEbiography}{Evan Sparks}
-Biography text here.
+\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{pictures/evanrsparks.jpg}}]{Evan R. Sparks}
+Evan R. Sparks is a Ph.D. student in Computer Science at UC Berkeley. He holds a Masters of Science in Computer Science from UC Berkeley and a Bachelor of Arts in Computer Science with High Honors from Dartmouth College. Prior to joining UC Berkeley, Evan worked in Quantitative Asset Management at MDT Advisers and as an Engineer at the Web Intelligence firm Recorded Future.
 \end{IEEEbiography}
 
 \begin{IEEEbiography}{Oliver Zahn}
