add Kyle Barbary bio

--- a/Kira.tex
+++ b/Kira.tex
@@ -1575,8 +1575,8 @@ This research used resources of the National Energy Research Scientific Computin
 Biography text here.
 \end{IEEEbiography}
 
-\begin{IEEEbiography}{Kyle Barbary}
-Biography text here.
+\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{pictures/kylebarbary.jpg}}]{Kyle Barbary}
+Kyle Barbary is a Cosmology Data Science Fellow in the Berkeley Center for Cosmological Physics and the Berkeley Institute for Data Science. He studies cosmology using Type Ia supernovae as part of the Nearby Supernova Factory experiment and develops software tools for analyzing astronomical data in Python and Julia.
 \end{IEEEbiography}
 
 \begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{pictures/frankaustinnothaft.jpg}}]{Frank Austin Nothaft}
