--- a/Kira.tex
+++ b/Kira.tex
@@ -1601,8 +1601,8 @@ Biography text here.
 David Patterson is the is the E.H. and M.E. Pardee Professor of Computer Science at UC Berkeley and is a past president of ACM, and past chair of the UC Berkeley Computer Science Department. David has been awarded the IEEE von Neumann Medal, the IEEE Johnson Storage Award, the SIGMOD Test of Time award, the ACM-IEEE Eckert-Mauchly Award, and the Katayanagi Prize. He was also elected to both AAAS societies, the National Academy of Engineering, the National Academy of Sciences, the Silicon Valley Engineering Hall of Fame, and to be a Fellow of the Computer History Museum, the IEEE, and the ACM.
 \end{IEEEbiography}
 
-\begin{IEEEbiography}{Saul Perlmutter}
-Biography text here.
+\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{pictures/saulperlmutter.jpg}}]{Saul Perlmutter}
+Saul Perlmutter is an astrophysicist at the Lawrence Berkeley National Laboratory and a professor of physics at UC Berkeley. He is a member of the American Academy of Arts & Sciences, a Fellow of the American Association for the Advancement of Science, and a member of the National Academy of Sciences. Along with Brian P. Schmidt and Adam Riess, Saul shared the 2006 Shaw Prize in Astronomy, the 2011 Nobel Prize in Physics, and the 2015 Breakthrough Prize in Fundamental Physics for the discovery of the accelerated expansion of the universe.
 \end{IEEEbiography}
 
 % insert where needed to balance the two columns on the last page with
