add Zhao's photo and bio

--- a/Kira.tex
+++ b/Kira.tex
@@ -1571,8 +1571,8 @@ This research used resources of the National Energy Research Scientific Computin
 %\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{mshell}}]{Michael Shell}
 % or if you just want to reserve a space for a photo:
 
-\begin{IEEEbiography}{Zhao Zhang}
-Biography text here.
+\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{pictures/zhaozhang.jpg}}]{Zhao Zhang}
+Zhao Zhang is a postdoc researcher in AMPLab and a data science fellow in BIDS(Berkeley Institute for Data Science) at University of California, Berkeley. His research is to enable data intensive scientific applications on distributed and parallel systems. Zhao received his Ph.D from the Department of Computer Science, University of Chicago in June 2014.
 \end{IEEEbiography}
 
 \begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{pictures/kylebarbary.jpg}}]{Kyle Barbary}
