minor fix on Saul's bio

--- a/Kira.tex
+++ b/Kira.tex
@@ -1602,7 +1602,7 @@ David Patterson is the is the E.H. and M.E. Pardee Professor of Computer Science
 \end{IEEEbiography}
 
 \begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{pictures/saulperlmutter.jpg}}]{Saul Perlmutter}
-Saul Perlmutter is an astrophysicist at the Lawrence Berkeley National Laboratory and a professor of physics at UC Berkeley. He is a member of the American Academy of Arts & Sciences, a Fellow of the American Association for the Advancement of Science, and a member of the National Academy of Sciences. Along with Brian P. Schmidt and Adam Riess, Saul shared the 2006 Shaw Prize in Astronomy, the 2011 Nobel Prize in Physics, and the 2015 Breakthrough Prize in Fundamental Physics for the discovery of the accelerated expansion of the universe.
+Saul Perlmutter is an astrophysicist at the Lawrence Berkeley National Laboratory and a professor of physics at UC Berkeley. He is a member of the American Academy of Arts \& Sciences, a Fellow of the American Association for the Advancement of Science, and a member of the National Academy of Sciences. Along with Brian P. Schmidt and Adam Riess, Saul shared the 2006 Shaw Prize in Astronomy, the 2011 Nobel Prize in Physics, and the 2015 Breakthrough Prize in Fundamental Physics for the discovery of the accelerated expansion of the universe.
 \end{IEEEbiography}
 
 % insert where needed to balance the two columns on the last page with
