--- a/Kira.tex
+++ b/Kira.tex
@@ -504,7 +504,7 @@ Berkeley Institute for Data Science and Berkeley Center for Cosmological Physics
 % in the abstract or keywords.
 \IEEEtitleabstractindextext{%
 \begin{abstract}
-\zhaonote{revised with pyKira SE performance}
+\zhaonote{revised with Kira-v2 SE performance}
 Scientific analyses commonly compose multiple single-process programs into a dataflow.
 An end-to-end dataflow of single-process programs is known as a many-task application.
 Typically, tools from the HPC software stack are used to parallelize these analyses.
@@ -1021,10 +1021,14 @@ file I/O is similar to GlusterFS, file system metadata is consolidated onto a sm
 
 \section{Performance}
 \label{sec:Performance}
+Over the previously implemented Kira with Spark's Scala interface, we migrate to the Python interface 
+for increased uptake in the astronomy community. Moreover, the improve the data structure and layout
+and minimize the data copy during inter-language communication. To differentiate the two implementations,
+we refer to them as Kira-SE-v1 and Kira-SE-v2, respectively.
 
-We compare Kira SE's performance when running on Spark and PySpark against the HPC solution that runs
+We compare both of the Kira implementations against the HPC solution that runs
 the C code in the SEP library (referred to as the C version in the following text). 
-Because all implementations use the same SEP library, Kira SE (both Scala and Python implementation) 
+Because all implementations use the same SEP library, Kira SE (both versions) 
 perform an identical amount of computation and I/O as the C version.
 
 To understand Spark's overhead, we first compare Kira SE's performance against the C version on a single
@@ -1048,8 +1052,8 @@ Error bars in the figures are standard deviation of the measurements.
 
 The purpose of the scale-up experiments is to understand Spark's overhead by running
 Kira SE on a single node. 
-With Spark's Scala API, the performance slowdown is caused mainly by Java Virtual Machine (JVM) and JNI overhead.
-With PySpark, the slowdown is caused by the interaction between the runtime of Scala, Python and C. 
+With Kira-SE-v1, the performance slowdown is caused mainly by Java Virtual Machine (JVM) and JNI overhead.
+With Kira-SE-v2, the slowdown is caused by the interaction between the runtime of Scala, Python and C. 
 We also wanted to identify the factors that bound Kira SE's performance. 
 For both Kira SE and the C implementation, we store data locally in an ext4 file system.
 
@@ -1057,8 +1061,6 @@ For this experiment, we use a 12GB dataset from the SDSS DR2 survey. The dataset
 2310 image files and each image is $\sim$6MB.
 Figure~\ref{fig:scaleup} shows the relative
 performance of Kira SE and the C version for various core counts on a single machine.
-To differentiate Kira SE's performance with Spark's Scala API and Python API, we refer
-to the two implementations as scalaKira SE and pyKira SE, respectively.
 
 \begin{figure}[h]
 	\begin{center}
@@ -1068,16 +1070,20 @@ to the two implementations as scalaKira SE and pyKira SE, respectively.
   	\end{center}
 \end{figure}
 
-\zhaonote{revised with pyKira SE performance}
+\zhaonote{revised with Kira SE v2 performance}
 The C version is bound by local disk performance and runtime improves by 65\% when scaling from a single core
 to eight cores.
-Although scalaKira SE is $7.4\times$ slower than the C implementation
-on a single core, Kira SE is within $2.2\times$ the performance of the C version when using all eight cores on the node.
-The pyKira SE is 39.7\% slower than the C implementation with a single core, while this performance gap
-shrinks as the core count increases. And the performance of pyKira SE converges to the C performance beyond four cores.
+Although Kira-SE-v1 is $7.4\times$ slower than the C implementation
+on a single core, Kira-SE-v1 is within $2.2\times$ the performance of the C version when using all eight cores on the node.
+Kira-SE-v2 is 39.7\% slower than the C implementation with a single core, while this performance gap
+shrinks as the core count increases. And the performance of Kira-SE-v2 converges to the C performance beyond four cores.
 The scaling curves indicate that the performance of the approaches begins to converge
 as core count increases. At convergence, both of the approaches will be saturating the local
 disk bandwidth.
+
+With a performance breakdown profile, we confirm that the performance improvement of Kira-SE-v2 over
+Kira-SE-v1 attributes to the native data layout between Spark's Python interface and the SEP library
+as well as the minimized data copy between SEP library and the core C library. 
 
 We also profile the C implementation with both warm and cold file system caches. When running with a
 cold cache, the job completed in 371 seconds while the job completed in 83 seconds when
@@ -1089,28 +1095,29 @@ SExtractor is disk bound, we believe that it is representative of a data intensi
 \label{sec:Performance-scaleout}
 
 Next, we wanted to understand the strong scaling performance of both Kira SE and the C
-implementation. Although scalaKira SE has 2.2$\times$ worse performance when running on
-a single machine, we expect that Kira SE will achieve better performance at scale due
-to disk locality. We expect that this will allow scalaKira SE to outperform the C implementation
+implementation. Although Kira-SE-v1 has 2.2$\times$ worse performance when running on
+a single machine, we expect that Kira-SE-v1 will achieve better performance at scale due
+to disk locality. We expect that this will allow Kira-SE-v1 to outperform the C implementation
 on large clusters. 
-\zhaonote{revised with pyKira SE performance}
-For pyKira SE, it can be viewed as an improvement combination of locality and native C
-computation performance. We expect pyKira SE to be faster than the C implementation
+\zhaonote{revised with Kira-SE-v2 performance}
+For Kira-SE-v2, it can be viewed as an improvement combination of locality and native C
+computation performance. We expect Kira-SE-v2 to be faster than the C implementation
 at all scales.
 
 We use a 65GB dataset from the SDSS DR7 survey that comprises 11,150 image files.
 Kira SE was configured to use HDFS as a storage system, while the C version used GlusterFS. 
 Both HDFS and GlusterFS are configured with a replication factor of two.
 
-\zhaonote{revised with pyKira SE performance}
-Figure~\ref{fig:scaleout} compares the performance of scalaKira SE, pyKira SE, and the C version across
+\zhaonote{revised with Kira-SE-v2 performance}
+Figure~\ref{fig:scaleout} compares the performance of Kira-SE-v1, Kira-SE-v2, and the C version across
 multiple compute nodes in log scale. 
-ScalaKira SE is 2.7$times$ slower as the C version on eight cores. 
+Kira-SE-v1 is 2.7$times$ slower as the C version on eight cores. 
 However, the gap between the two implementations decreases as we scale up. 
-On 256 cores and 512 cores, scalaKira SE is respectively 5.6\% and 22.4\% faster than the C version.
-The pyKira SE shows a more significant improvement over the C implementation with a speedup of
+On 256 cores and 512 cores, Kira-SE-v1 is respectively 5.6\% and 22.4\% faster than the C version.
+The Kira-SE-v2 shows a more significant improvement over the C implementation with a speedup of
 2.2$\times\sim$3.1$\times$ across scales.
-Both the scalaKira SE and pyKira SE show a close linear scalability.
+Both the Kira-SE-v1 and Kira-SE-v2 show a close linear scalability.
+
 
 \begin{figure}[h]
 	\begin{center}
@@ -1120,10 +1127,10 @@ Both the scalaKira SE and pyKira SE show a close linear scalability.
   	\end{center}
 \end{figure}
 
-\zhaonote{revised with pyKira SE performance}
-The fundamental driver of scalaKira SE's and pyKira SE's linear scalability is its consistent local disk
+\zhaonote{revised with Kira-SE-v2 performance}
+The fundamental driver of Kira-SE-v1's and Kira-SE-v2's linear scalability is its consistent local disk
 hit ratio, which is the ratio between the number of tasks that access the input file 
-on local disk and total number of tasks. Spark and HDFS optimize for data locality during scheduling and achieve a
+on local disk and total number of tasks. Tacking Kira-SE-v2 as an example, Spark and HDFS optimize for data locality during scheduling and achieve a
 hit ratio around 98\% with a small standard deviation (around 0.2\%), as shown in Figure~\ref{fig:locality}. 
 In contrast, the C implementation's estimated locality hit ratio decreases in half as the cluster size doubles.
 
@@ -1165,11 +1172,11 @@ know the location of the metadata of a given file name in the cluster.
 
 We evaluate these configurations using the same dataset as the scale-out experiment. We
 select 128 cores and 256 cores as the target scale since it is the transition point in
-Figure~\ref{fig:scaleout} where scalaKira SE begins to run faster than the C version. 
+Figure~\ref{fig:scaleout} where Kira-SE-v1 begins to run faster than the C version. 
 As stated previously in~\S\ref{sec:HPC}, the C version performs a two-step process. 
 The first step collects and partitions all file paths. We refer to this step as metadata overhead. 
 The processing step occurs next, and is where each node processes its own partition.
-Figure~\ref{fig:allgluster} compares the performance of scalaKira SE, pyKira SE,  and the C version with
+Figure~\ref{fig:allgluster} compares the performance of Kira-SE-v1, Kira-SE-v2,  and the C version with
 profiled metadata overhead.  
 
 \begin{figure}[h]
@@ -1180,7 +1187,7 @@ profiled metadata overhead.
   	\end{center}
 \end{figure}
 
-The C version running in the \emph{distributed} mode outperforms scalaKira SE at both scales. 
+The C version running in the \emph{distributed} mode outperforms Kira-SE-v1 at both scales. 
 However, the \emph{distributed} mode is not practical in a cloud environment since
 it has no replication or any other resilience mechanism. Replicating or striping
 files introduces extra metadata overhead when we compare the \emph{replicated} mode
@@ -1193,14 +1200,14 @@ to the doubled probability of accessing half file (with the striping factor of t
 Since the input files are $\sim$6MB each, and are always processed by a single task, the
 \emph{replicated} mode should be preferred to the \emph{striped replicated} mode.
 
-\zhaonote{revised with pyKira SE performance}
-When running on 256 cores, scalaKira SE outperforms all GlusterFS configurations except for the (impractical) \emph{distributed}
-mode. When comparing to the \emph{distributed} mode, scalaKira SE delivers comparable performance, as it is 18\% slower. 
+\zhaonote{revised with Kira-SE-v2 performance}
+When running on 256 cores, Kira-SE-v1 outperforms all GlusterFS configurations except for the (impractical) \emph{distributed}
+mode. When comparing to the \emph{distributed} mode, Kira-SE-v1 delivers comparable performance, as it is 18\% slower. 
 In our experiments with the 1TB dataset in Section~\ref{sec:1TB-EC2}, 
-scalaKira SE outperforms the \emph{distributed} mode.
+Kira-SE-v1 outperforms the \emph{distributed} mode.
 
-\zhaonote{revised with pyKira SE performance}
-As expected, pyKira SE improves the performance significantly with speedups of 2.1$\times$ and 1.8 $\times$
+\zhaonote{revised with Kira-SE-v2 performance}
+As expected, Kira-SE-v2 improves the performance significantly with speedups of 2.1$\times$ and 1.8 $\times$
 compared to the \emph{distributed} mode on 128 cores and 256 cores, respectively.
 
 \subsection{1TB Dataset Performance}
@@ -1212,19 +1219,19 @@ With this experiment, we seek to answer the following questions:
 \begin{itemize}
 \item Can Kira scale to process a 1TB dataset?
 \item What is the relative performance of Kira compared to the HPC version on the Amazon EC2 cloud?
-\item How do scalaKira SE and pyKira SE performance compare to the HPC version on a supercomputer?
+\item How does Kira SE performance compare to the HPC version on a supercomputer?
 \end{itemize}
 
 \subsubsection{Cloud}
 \label{sec:1TB-EC2}
-\zhaonote{revised with pyKira SE performance}
-We configure GlusterFS in \emph{replicated} and \emph{distributed} modes and compare scalaKira
-SE's and pyKira SE's performance against the C implementation. 
-ScalaKira SE runs $1.1\times$ and $1.3\times$ faster than the C version running on top of
+\zhaonote{revised with Kira-SE-v2 performance}
+We configure GlusterFS in \emph{replicated} and \emph{distributed} modes and compare 
+Kira-SE-v1's and Kira-SE-v2's performance against the C implementation. 
+Kira-SE-v1 runs $1.1\times$ and $1.3\times$ faster than the C version running on top of
 GlusterFS configured in \emph{distributed} mode on 256 cores and 512 cores respectively. 
-Using the more practical \emph{replicated} configuration of GlusterFS,scalaKira SE is $2.3\times$ and $2.5\times$ faster. 
-PyKira SE runs $2.5\times$ and $2.0\times$ faster than the impractical \emph{distributed} mode on 256 cores and 512 cores, respectively.
-PyKira SE is also $4.1\times\sim5.2\times$ faster than the \emph{replicated} mode.
+Using the more practical \emph{replicated} configuration of GlusterFS, Kira-SE-v1 is $2.3\times$ and $2.5\times$ faster. 
+On the other hand, Kira-SE-v2 runs $2.5\times$ and $2.0\times$ faster than the impractical \emph{distributed} mode on 256 cores and 512 cores, respectively.
+Kira-SE-v2 is also $4.1\times\sim5.2\times$ faster than the \emph{replicated} mode.
 A detailed breakdown of the performance is shown in Figure~\ref{fig:1tb-ec2}.
 The C version in \emph{distributed} mode is slower due to the node starvation that is introduced by our HPC solution.
 The C version in \emph{replicated} mode slows down $2.2\times$ than that in \emph{distributed} mode because the directory metadata query
@@ -1239,13 +1246,13 @@ of $1.4\times$.
   	\end{center}
 \end{figure}
 
-\zhaonote{revised with pyKira SE performance}
+\zhaonote{revised with Kira-SE-v2 performance}
 Compared to the experiment with the 65GB dataset in Section~\ref{sec:Performance-scaleout},
-pyKira SE processes $15.9\times$ more data in $16.3\times$ more time. If we discount the Spark
-startup time, we can see that pyKira SE scales linearly in relation to the data size.
+Kira-SE-v2 processes $15.9\times$ more data in $16.3\times$ more time. If we discount the Spark
+startup time, we can see that Kira-SE-v2 scales linearly in relation to the data size.
 
-\zhaonote{revised with pyKira SE performance}
-The overall throughput of pyKira SE is 1,335~MB/second, which is $4.0\times$ greater than necessary
+\zhaonote{revised with Kira-SE-v2 performance}
+The overall throughput of Kira-SE-v2 is 1,335~MB/second, which is $4.0\times$ greater than necessary
 to support the upcoming Large Synoptic Survey Telescope (LSST), as discussed in
 Section~\ref{sec:Background-EngReq}. This high throughput enables real-time image processing.
 
@@ -1253,7 +1260,7 @@ Section~\ref{sec:Background-EngReq}. This high throughput enables real-time imag
 
 Many astronomers have access to supercomputers and believe that
 supercomputers outperform commodity clusters for data-intensive applications.
-To examine this belief, we compare scalaKira SE and pyKira SE on the Amazon cloud versus the performance of
+To examine this belief, we compare Kira-SE-v1 and Kira-SE-v2 on the Amazon cloud versus the performance of
 the C version running on the NERSC Edison supercomputer, a Cray XC 30 System. We use
 the Lustre file system which provides a peak throughput of 48GB/s. Each compute
 node of Edison is equipped with a 24-core Ivy Bridge processor, with a 2.4GHz clock rate.
@@ -1273,8 +1280,8 @@ Figure~\ref{fig:1tb-edison} shows the measurements.
   	\end{center}
 \end{figure}
 
-ScalaKira SE delivers a comparable performance to that of the C version on Edison. 
-While the pyKira SE achieves a $1.8\times$ speedup compared to that of Edison performance.
+Kira-SE-v1 delivers a comparable performance to that of the C version on Edison. 
+While the Kira-SE-v2 achieves a $1.8\times$ speedup compared to that of Edison performance.
 During the experiments, we see that the C version performance varies significantly with an 
 average time-to-solution of 1,388.9~seconds and a standard deviation of 520.5~seconds. 
 These results clearly fall into two classes. The first class has an average time-to-solution of 937.8~seconds
@@ -1287,34 +1294,34 @@ Since the Edison cluster scheduler only schedules a single job per compute node,
 are completely isolated. Thus, we can reason that, it is the I/O network resource or the file system 
 that causes the performance variance. 
 
-\zhaonote{revised with pyKira SE performance}
-On the other hand, pyKira is able to accelerate the performance by 1.8x with an average time-to-solution of
-767.4~seconds and a standard deviation of 10.9~seconds. The stable performance of pyKira SE
-and scalaKira SE can be attributed to exploiting data locality: both the Kira implementations move the I/O from network
+\zhaonote{revised with Kira-SE-v2 performance}
+On the other hand, Kira-SE-v2 is able to accelerate the performance by 1.8x with an average time-to-solution of
+767.4~seconds and a standard deviation of 10.9~seconds. The stable performance of both version of Kira SE
+can be attributed to exploiting data locality: both the Kira implementations move the I/O from network
 to local disk access, which gives a higher I/O bandwidth as well as better task-to-task isolation.
 
 \subsection{Solid State Disk}
 \zhaonote{This section is new}
-In~\S\ref{sec:Performance-scaleup}, we stated that the pyKira SE performance is bound by local disk bandwidth.
+In~\S\ref{sec:Performance-scaleup}, we stated that the Kira-SE-v2 performance is bound by local disk bandwidth.
 By running with high bandwidth SSDs, we can quantitatively evaluate the potential performance improvement that
 increased I/O bandwidth can provide.
 
 \begin{figure}[h]
 	\begin{center}
 		\includegraphics[width=85mm]{pictures/ssd-65GB}
-		\caption{pyKira SE Performance with 65GB Input Using Solid State Disk (SSD) Compared to Spinning Disks (HDD)  (Lower is Better)
+		\caption{Kira-SE-v2 Performance with 65GB Input Using Solid State Disk (SSD) Compared to Spinning Disks (HDD)  (Lower is Better)
 		\label{fig:ssd-65GB}}
   	\end{center}
 \end{figure}
 
-Figure~\ref{fig:ssd-65GB} shows that using SSDs allows pyKira SE to run $1.6\times\sim2.0\times$ faster than spinning disks across various cluster scales.
+Figure~\ref{fig:ssd-65GB} shows that using SSDs allows Kira-SE-v2 to run $1.6\times\sim2.0\times$ faster than spinning disks across various cluster scales.
 The measurement with the 1TB dataset  shows a 1.9$\times$ and 2.0$\times$ speedup on 256 cores and 512 cores, respectively.
 Using SSDs boosts the sustained processing rate on 512 cores from 1,335~MB/second to 2,723~MB/second, which is about 8.3$\times$ higher
 than the LSST real time processing requirement.
 
 \subsection{Spark Streaming}
 \zhaonote{This section is new}
-In this section, we evaluate the performance of pyKira SE when deployed with Spark Streaming. We evaluate on the metric of average total delay,
+In this section, we evaluate the performance of Kira-SE-v2 when deployed with Spark Streaming. We evaluate on the metric of average total delay,
 which is composed of schedule delay and execution delay.
 The schedule delay is contributed by the system when it can not start processing the ready batch immediately as the previous batch is not finished.
 The execution delay is the time-to-solution for the data in the current batch.
@@ -1322,16 +1329,16 @@ By summing these two numbers into an average total delay, we show the average ti
 
 With Spark Streaming, users interact with the application deployment by setting the streaming interval between two batches of processing.
 This streaming interval setting will in turn affect the total delay for each data item and the throughput of the overall deployment.
-We investigate the configuration space of pyKira SE with a fixed cluster of 16 m2.4xlarge instances (128 cores in total) and 
+We investigate the configuration space of Kira-SE-v2 with a fixed cluster of 16 m2.4xlarge instances (128 cores in total) and 
 the 65~GB dataset. 
-Our goal is to find the tradeoff between total delay and sustained throughput when changing the streaming interval used by pyKira SE. Our goal is to
+Our goal is to find the tradeoff between total delay and sustained throughput when changing the streaming interval used by Kira-SE-v2. Our goal is to
 maximize throughput while minimizing delay.
 
 To simplify the analysis, we first minimize the scheduling delay by setting the streaming interval so that the processing of two batches
 do not overlap.
-For this purpose, we divide the 65GB dataset into 88 subsets to emulate that the dataset contians 88 arrivals, 
+For this purpose, we divide the 65GB dataset into 88 subsets to emulate that the dataset contains 88 arrivals, 
 with each arrival having $\sim128$ files (780~MB).
-Then we profile the execution delay when pyKira SE processes with a batch size of 8 arrivals, 4 arrivals, 2 arrivals, and 1 arrival.
+Then we profile the execution delay when Kira-SE-v2 processes with a batch size of 8 arrivals, 4 arrivals, 2 arrivals, and 1 arrival.
 Figure~\ref{fig:stream} depicts the measurements.
 We see that the execution delay of the first batch is higher than other batches due to startup cost from loading libraries into memory.
 Decreasing the per-batch arrival count approximately halves the execution delay, until the step from 2 arrivals per batch to 1 arrival per batch.
@@ -1380,8 +1387,8 @@ the throughput decreases dramatically by 50\% due to the system scalability bott
 In other words, the total work amount with 1 arrival per batch is not enough to keep up high utilization
 of all 128 cores. 
 
-The pyKira SE's performance in batch mode on 128 cores in \S\ref{sec:Performance-scaleout} 
-can be viewed as an upper bound of the streaming pyKira SE performance as Spark Streaming
+The Kira-SE-v2's performance in batch mode on 128 cores in \S\ref{sec:Performance-scaleout} 
+can be viewed as an upper bound of the streaming Kira-SE-v2 performance as Spark Streaming
 introduces additional system overhead compared to pure Spark.
 The sustained throughput with streaming interval of 9s matches the batch performance and
 it indicates that increasing the streaming interval will no longer improve the sustained throughput 
@@ -1457,7 +1464,7 @@ and performant astronomy image processing toolkit using Apache Spark running on 
 the real world Kira Source Extractor application, and use this application to study the programming
 flexibility, dataflow richness, scheduling capacity and performance of the surrounding ecosystem.
 
-\zhaonote{revised with pyKira SE performance}
+\zhaonote{revised with Kira-SE-v2 performance}
 The Kira SE implementation demonstrates linear scalability with both increasing cluster and data
 size. Due to its superior data locality, our Spark-based implementation achieves a speedup of $2.2\times\sim4.1\times$ than the equivalent C 
 implementation running on GlusterFS depending on the dataset and cluster scale. 
