tentatively add Mike's photo and bio, subject to update

--- a/Kira.tex
+++ b/Kira.tex
@@ -1600,8 +1600,8 @@ Biography text here.
 
 \newpage
 
-\begin{IEEEbiography}{Michael J. Franklin}
-Biography text here.
+\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{pictures/michaelfranklin.jpg}}]{Michael J. Franklin}
+Michael J. Franklin is the Thomas M. Siebel Professor of Computer Science  the Director of the Algorithms, Machines, and People Laboratory (AMPLab) at UC Berkeley. Prof. Franklin is a co-PI and Executive Committee member for the Berkeley Institute of Data Science. He is a Fellow of the ACM and a two-time winner of the ACM SIGMOD "Test of Time" award.
 \end{IEEEbiography}
 
 \begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{pictures/patterson.jpg}}]{David A. Patterson}
